@@ -25,7 +25,13 @@
 		 <area x="19%" y="77%" width="15%" height="7%" layer="3">
 			<drawtext x="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currentstart} - {currentstop}"/>
 		</area>
-		<area x="31%" y="77%" width="55%" height="7%" layer="3">
+<!--single-line display-->
+		<area condition="not{twoLineDisplay}" x="31%" y="77%" width="55%" height="7%" layer="3">
+			<drawtext condition="isset{currentsubtitle}" x="0" y="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currenttitle} - {currentsubtitle}"/>
+			<drawtext condition="empty{currentsubtitle}" x="0" y="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currenttitle}"/>
+		</area>
+<!--two-line display-->
+		<area condition="{twoLineDisplay}" x="31%" y="77%" width="55%" height="7%" layer="3">
 			<drawtext condition="isset{currentsubtitle}" x="0" y="0" font="{light}" fontsize="53%" color="{clrLightGray}" text="{currenttitle}"/>
 			<drawtext condition="isset{currentsubtitle}" x="0" y="55%" font="{light}" fontsize="40%" color="{clrLightGray}" text="{currentsubtitle}"/>
 			<drawtext condition="empty{currentsubtitle}" x="0" y="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currenttitle}"/>
@@ -37,12 +43,18 @@
 		<area x="19%" y="87%" width="15%" height="7%" layer="3">
 			<drawtext x="0" y="10%" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nextstart} - {nextstop}"/>
 		</area>
-		<area x="31%" y="87%" width="55%" height="7%" layer="3">
+<!--single-line display-->
+		<area condition="not{twoLineDisplay}" x="31%" y="87%" width="55%" height="7%" layer="3">
+			<drawtext condition="isset{nextsubtitle}" x="0" y="10%" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nexttitle} - {nextsubtitle}"/>
+			<drawtext condition="empty{nextsubtitle}" x="0" y="10%" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nexttitle}"/>
+		</area>
+<!--two-line display-->
+		<area condition="{twoLineDisplay}" x="31%" y="87%" width="55%" height="7%" layer="3">
 			<drawtext condition="empty{nextsubtitle}" x="0" y="10%" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nexttitle}"/>
 			<drawtext condition="isset{nextsubtitle}" x="0" y="10%" font="{light}" fontsize="53%" color="{clrLightGray}" text="{nexttitle}"/>
 			<drawtext condition="isset{nextsubtitle}" x="0" y="65%"  font="{light}" fontsize="40%" color="{clrLightGray}" text="{nextsubtitle}"/>
 		</area>
-				<area x="85%" y="87%" width="13%" height="7%" layer="3">
+		<area x="85%" y="87%" width="13%" height="7%" layer="3">
 			<drawtext align="right" y="10%" font="{light}" fontsize="50%" color="{clrLightGray}" text="{nextduration} min" />
 		</area>
 	</epginfo>
